--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Diniullova Julia",
+  "name": "dl-academy-markup-template",
   "version": "1.0.0",
   "private": true,
   "description": "Markup template",
